<resources>

    <string name="app_name">UCLove</string>

    <!-- Tritre des activités -->
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_inscription">Register</string>
    <string name="title_activity_menu_p">Menu</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_profil">Your profil</string>
    <string name="title_activity_profil_ami">Friend\'s profile</string>
    <string name="title_activity_edit_profil">Edit my profile</string>
    <string name="title_activity_request">Requests</string>
    <string name="title_activity_friend">Friends</string>

    <!-- Textes Connexion - Inscription -->
    <string name="texte_mdp">Password : </string>
    <string name="texte_login">Username : </string>
    <string name="hint_mdp">Password</string>
    <string name="hint_login">Username</string>
    <string name="hint_age">Age</string>
    <string name="hint_hair">Hair</string>
    <string name="hint_eyes">Eyes</string>
    <string name="hint_location">Location</string>
    <string name="hint_inclination">Inclination</string>
    <string name="texte_connexion">I am already registered!</string>
    <string name="btn_seConnecter">Log in</string>
    <string name="btn_SInscrire">Sign up</string>
    <string name="texte_inscription">Sign up</string>

    <string name="texte_PasDeCompte">Not already registered?</string>
    <string name="texte_description">Description :</string>

    <!-- Textes Menu -->
    <string name="texte_profile">Profile</string>
    <string name="texte_preferences">Preferences</string>
    <string name="texte_people">People</string>
    <string name="texte_friends">Friends</string>
    <string name="texte_requests">Requests</string>
    <string name="texte_dispo">Disponibilities</string>
    <string name="btn_deco">Log out</string>



    <!-- Textes Preferences -->

    <string name="texte_language">Language</string>
    <string name="texte_about">About us</string>
    <string name="language_english">English</string>
    <string name="language_french">Français</string>

    <string name="about_us">UCLove is a project made by five students from the University of Louvain-la-Neuve.</string>

    <string-array name="language_array">
        <item>English</item>
        <item>Français</item>
    </string-array>

    <!-- Textes People -->
    <string name="texte_filtre1">Filter by</string>
    <string name="texte_filtre2">for</string>
    <string name="texte_random">Random search</string>
    <string name="hint_value">value</string>
    <string name="username">User</string>
    <string name="genre">Gender</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="inclinaison">Inclinaison</string>
    <string name="eyes">Eyes</string>
    <string name="hair">Hairs</string>

    <!-- Textes Chat -->
    <string name="titre_chat">Chat</string>
    <string name="btn_send">Send</string>

    <!-- Textes dispo -->
    <string name="titre_dispo">Disponibilities</string>
    <string name="btn_addDispo">Add disponibility</string>
    <string name="check_dispo">Matched/Unmatched</string>

    <!--Textes edit-->
    <string name="edit_name">Name</string>
    <string name="edit_gender">Gender</string>
    <string name="edit_age">Age</string>
    <string name="edit_hair">Hairs</string>
    <string name="edit_eyes">Eyes</string>
    <string name="edit_loc">Location</string>
    <string name="edit_ori">Inclinaiton</string>
    <string name="edit_pic">Picture</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_changePic">Change picture</string>
    <string name="set_private">Private mode</string>

    <!--Textes request-->
    <string name="btn_InOut">Sent/Received</string>

    <!--Textes friends-->
    <string name="btn_Favs">Show only favorites</string>

    <!-- Textes profil-->
    <string name="titre_profil">Your profile</string>
    <string name="login">Login</string>
    <string name="Name">Name</string>
    <string name="edit_prof">Edit profile</string>
    <string name="upload_pic">Upload picture</string>

    <!-- Textes friendMenu-->
    <string name="add_fav">Add to favorite</string>
    <string name="chat">Chat</string>
    <string name="rdv">Send rendez-vous</string>
    <string name="delete_f">Delete this friend</string>



</resources>