<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:padding="5dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/title_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30px"
            android:paddingTop="30px">

            <ImageButton
                android:id="@+id/btn_back"
                style="@style/GrosBouton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                />

            <TextView
                android:id="@+id/textView_title_people"
                style="@style/Titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/btn_back"
                android:text="Request" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/filtre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_people"
            android:layout_marginTop="20dp">




        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/title_people"
            android:background="@android:color/darker_gray" />



        <RelativeLayout
            android:id="@+id/ajout_refus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_people"
            android:layout_marginTop="60dp">

            <TextView
                style="@style/SimpleTexte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/username"
                android:id="@+id/user_login" />

            <ImageButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:src="@mipmap/ajout"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="50dp"
                android:src="@mipmap/croix"
                android:background="@android:color/transparent"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/infos_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ajout_refus"
            android:layout_marginTop="50dp"
            >

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/img_user"
                android:src="@mipmap/arrow1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/img_user"
                android:src="@mipmap/arrow2" />

            <TextView
                android:id="@+id/user_gender"
                style="@style/SimpleTexte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_user"
                android:layout_marginLeft="20dp"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/user_hair"
                style="@style/SimpleTexte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_gender"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/hair" />
            <TextView
                android:id="@+id/user_location"
                style="@style/SimpleTexte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_hair"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/location" />

            <TextView
                style="@style/SimpleTexte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/img_user"
                android:id="@+id/user_age"
                android:layout_marginRight="20dp"
                android:text="@string/age" />

            <TextView
                style="@style/SimpleTexte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/user_age"
                android:id="@+id/user_eyes"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/eyes" />
            <TextView
                style="@style/SimpleTexte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/user_eyes"
                android:id="@+id/user_inclination"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/inclinaison" />


        </RelativeLayout>


    </RelativeLayout>
</ScrollView>