<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:padding="5dp"
    android:orientation="vertical">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_dispo"
        android:paddingBottom="30px"
        android:paddingTop="30px">

        <ImageButton
            android:id="@+id/btn_dispo_back"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@mipmap/back"
            android:background="@android:color/transparent"
            />


        <TextView
            style="@style/Titre"
            android:id="@+id/textView_title_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titre_dispo"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/btn_unmatched"
            android:textColor="@color/darkAmbre"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:text="@string/check_dispo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_addDispo"
            android:id="@+id/add_dispo"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_dispo"
        android:padding="5dp"
        tools:listitem="@android:layout/simple_list_item_1" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>


</LinearLayout>
